Day15Assignment/style.css
* {
  margin: 0%;
  padding: 0%;
  box-sizing: border-box;
}

html, body {
  height: 100%;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  background-color: #262626;
}

#main {
  height: 100%;
  width: 100%;
  background-color: rgb(95, 101, 101);
  padding: 20px;
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

#card {
  display: flex;
  height: 300px;
  width: 240px;
  background-color: #100f0f4d;
  backdrop-filter: blur(10px);
  color: white;
  border-radius: 5px;
  box-shadow: 8px 5px 50px rgba(26, 26, 26, 0.394);
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 14px;
}


#card img {
  height: 100px;
  width: 100px;
  object-fit: cover;
  border-radius: 50%;
  border: 1px solid rgba(255, 255, 255, 0.78);
}

#title {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 8px;
}

#card h2 {
  font-size: 20px;
  font-weight: 600;
  letter-spacing: 0.009rem;
  color: rgba(0, 0, 0, 0.797);
}

#card p{
  width: 150px;
  font-weight: 100;
  text-align: center;
  font-size: 11px;
  color: rgba(0, 0, 0, 0.621);
  line-height: 1.1;
}

#card button {
  border: none;
  background-color: orange;
  padding: 8px 30px;
  border-radius: 20px;
  color: rgba(0, 0, 0, 0.797);
  cursor: pointer;
  font-weight: 600;
  margin-top: 15px;
}

#card button:hover {
  background-color: rgb(255, 140, 0);
  transition: 0.3s;
}

